fixing webpage overflow

--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 }
 
 html , body {
-    overflow-x: none;
+    overflow-x: hidden;
     width: 100%;
 }
 
